--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeApps.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeApps.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MultiPlug.Core.Models.Views.Extensions.ExtensionsHomeModel
 @{
-    Layout = "layout";
+    Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
 
 <style>
