--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsSecurity.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsSecurity.cshtml
@@ -1,4 +1,4 @@
 ﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.SecurityModel
 @{
-    Layout = "layout";
+    Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
