--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsUpdate.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsUpdate.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.UpdateModel
 @{
-    Layout = "layout";
+    Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
 
 <style>
