--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/FrameApp.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/FrameApp.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MultiPlug.Extension.Models.WebAppModel<object>
 @{
-    Layout = "layout";
+    Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
 @Include(@Model.ExtensionTemplateId, Convert.ChangeType(Model.ExtensionModel, Model.ExtensionModelType)), @Model.ExtensionModelType)
 
 <footer id="main-footer">
-    Extension: @Model.ExtensionName. <a href="http://multiplug.uk" target="_blank">MultiPlug .Net Fog Computing Platform</a> Copyright © 2019 British Systems, all rights reserved.
+    Extension: @Model.ExtensionName. <a href="http://multiplug.uk" target="_blank">MultiPlug .Net Edge Computing Platform</a> Copyright © 2020 British Systems, all rights reserved.
     <a href="#" class="pull-right" id="on-top-link">
         On Top&nbsp;<i class=" icon-chevron-up"></i>
     </a>
