--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
@@ -252,7 +252,7 @@
                 {
                     <tr>
                         <td></td>
-                        <td>@x.Assembly/td>
+                        <td>@x.Assembly</td>
                         <td>@x.Order</td>
                         <td>@if (x.EnabledLoad){ <text> <i class="icon-ok"></i> </text> }</td>
                         <td>@if (x.EnabledSave){ <text> <i class="icon-ok"></i> </text> }</td>
