--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
@@ -201,7 +201,7 @@
                             <a tabindex="-1" href="settings/"><i class="icon-wrench"></i>&nbsp;&nbsp;Overview</a>
                         </li>
                         <li>
-                            <a tabindex="-1" href="settings/system/"><i class="icon-info-sign"></i>&nbsp;&nbsp;System</a>
+                            <a tabindex="-1" href="settings/environment/"><i class="icon-info-sign"></i>&nbsp;&nbsp;Environment</a>
                         </li>
                         <li>
                             <a tabindex="-1" href="settings/hosting/"><i class="icon-cloud"></i>&nbsp;&nbsp;Hosting</a>
