--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.AppsModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,7 +21,6 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Apps</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
@@ -33,7 +32,7 @@
                 <div class="row-fluid"><div class="span12">Default App</div></div>
                 <div class="row-fluid">
                     <select class="span12" name="DefaultDashboard">
-                        @foreach (var x in @Model.Dashboards)
+                        @foreach (var x in @Model.Extension.Model.Dashboards)
                         {
                             <option value="@x.Key" @if (x.Value) { <text> selected </text> }>@x.Key</option>
                         }
@@ -45,9 +44,9 @@
                 <div class="row-fluid"><div class="span12">Theme</div></div>
                 <div class="row-fluid">
                     <select class="span12" name="Theme">
-                        @foreach (var x in @Model.Themes)
+                        @foreach (var x in @Model.Extension.Model.Themes)
                         {
-                            <option value="@x" @if (x == Model.CurrentTheme ) { <text> selected </text> }>@x</option>
+                            <option value="@x" @if (x == Model.Extension.Model.CurrentTheme ) { <text> selected </text> }>@x</option>
                         }
                     </select>
                 </div>
