--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsEnvironment.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsEnvironment.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.EnvironmentModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,7 +21,6 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Environment</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
@@ -33,7 +32,7 @@
                 <div class="row-fluid"><div class="span12">Logging</div></div>
                 <div class="row-fluid">
                     <select name="LoggingLevel">
-                        @foreach (var x in @Model.LoggingLevel)
+                        @foreach (var x in @Model.Extension.Model.LoggingLevel)
                         {
                             <option value="@x.Key" @if (x.Value) { <text> selected </text>       }>@x.Key</option>
                         }
@@ -44,7 +43,7 @@
             <div class="span4">
                     <div class="row-fluid"><div class="span12">Location</div></div>
                     <div class="row-fluid">
-                        <input name="Location" class="input-block-level" type="text" value="@Model.Location">
+                        <input name="Location" class="input-block-level" type="text" value="@Model.MultiPlugAPI.Environment.Location">
                     </div>
             </div>
 
