--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.HostingModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,7 +21,6 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Hosting</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
@@ -35,21 +34,21 @@
             <div class="span4">
                 <div class="row-fluid"><div class="span12">Host by IP</div></div>
                 <div class="row-fluid">
-                    <input type="checkbox" name="HostByIP" value="true" @Model.HostByIP />
+                    <input type="checkbox" name="HostByIP" value="true" @Model.Extension.Model.HostByIP />
                 </div>
             </div>
 
             <div class="span4">
                 <div class="row-fluid"><div class="span12">Host Port</div></div>
                 <div class="row-fluid">
-                    <input name="HostByIPPort" class="input-small" type="text" @*id="Param_LocalHostPort"*@ placeholder="80" value="@Model.HostByIPPort">
+                    <input name="HostByIPPort" class="input-small" type="text" @*id="Param_LocalHostPort"*@ placeholder="80" value="@Model.Extension.Model.HostByIPPort">
                 </div>
             </div>
 
             <div class="span4">
                 <div class="row-fluid"><div class="span12">Secure</div></div>
                 <div class="row-fluid">
-                    <input type="checkbox" name="HostByIPSecure" value="true" @Model.HostByIPSecure />
+                    <input type="checkbox" name="HostByIPSecure" value="true" @Model.Extension.Model.HostByIPSecure />
                 </div>
             </div>
         </div>
@@ -70,7 +69,7 @@
                     </tr>
                 </thead>*@
                 <tbody>
-                    @foreach (var Binding in @Model.HostBindings)
+                    @foreach (var Binding in @Model.Extension.Model.HostBindings)
                     {
                         <tr>
                             <td><input name="HostBindings" class="input-span12" type="text" value="@Binding"></td>
