--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.HousekeepingModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,10 +21,22 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Housekeeping</h2>
 </div>
 
+<h3 class="box-header">
+    Storage
+</h3>
+<div class="box">
+    <div class="row-fluid">
+        <p><a href="/settings/housekeeping/storage/">Log files</a></p>
+    </div>
+</div>
+
+
+<h3 class="box-header">
+    Memory
+</h3>
 <div class="box">
     <div class="row-fluid">
         <table class="table table-condensed">
@@ -38,7 +50,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var x in @Model.ExtensionResourceUsages)
+                @foreach (var x in @Model.Extension.Model.ExtensionResourceUsages)
                 {
                     <tr>
                         <td>@x.AssemblyName</td>
