--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsPerformance.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsPerformance.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.PerformanceModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,7 +21,6 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Performance</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
@@ -35,25 +34,25 @@
             <div class="span3">
                 <div class="row-fluid"><div class="span12">Seconds</div></div>
                 <div class="row-fluid">
-                    <input name="AssetsCacheSeconds" class="input-span12" type="text" value="@Model.AssetsCacheSeconds">
+                    <input name="AssetsCacheSeconds" class="input-span12" type="text" value="@Model.Extension.Model.AssetsCacheSeconds">
                 </div>
             </div>
             <div class="span3">
                 <div class="row-fluid"><div class="span12">Minutes</div></div>
                 <div class="row-fluid">
-                    <input name="AssetsCacheMinutes" class="input-span12" type="text" value="@Model.AssetsCacheMinutes">
+                    <input name="AssetsCacheMinutes" class="input-span12" type="text" value="@Model.Extension.Model.AssetsCacheMinutes">
                 </div>
             </div>
             <div class="span3">
                 <div class="row-fluid"><div class="span12">Hours</div></div>
                 <div class="row-fluid">
-                    <input name="AssetsCacheHours" class="input-span12" type="text" value="@Model.AssetsCacheHours">
+                    <input name="AssetsCacheHours" class="input-span12" type="text" value="@Model.Extension.Model.AssetsCacheHours">
                 </div>
             </div>
             <div class="span3">
                 <div class="row-fluid"><div class="span12">Days</div></div>
                 <div class="row-fluid">
-                    <input name="AssetsCacheDays" class="input-span12" type="text" value="@Model.AssetsCacheDays">
+                    <input name="AssetsCacheDays" class="input-span12" type="text" value="@Model.Extension.Model.AssetsCacheDays">
                 </div>
             </div>
         </div>
