--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsRecipes.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsRecipes.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultiPlug.Extension.Domain.Models.Views.Settings.RecipesModel
+﻿@model MultiPlug.Base.Http.EdgeApp
 @{
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
@@ -21,7 +21,6 @@
 </style>
 
 <div class="setting-heading">
-    <img height="35" width="35" alt="MultiPlug Icon" src="assets/default2016/images/MultiPlug-Icon.png">
     <h2>Recipes</h2>
 </div>
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
@@ -43,7 +42,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var x in @Model.Configurators)
+                    @foreach (var x in @Model.Extension.Model.Configurators)
                     {
                         <tr>
                             <input type="hidden" name="Configurator" value="@x.Name">
