--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeAnalytics.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeAnalytics.cshtml
@@ -3,6 +3,63 @@
     Layout = "MultiPlug.Ext.Thm.Default2016.Layout";
 }
 
-<div class="setting-heading">
-    <h2>Analytics</h2>
-</div>
+
+<section class="row-fluid">
+    <div class="span3">
+        <div class="box">
+            <ul class="nav nav-list">
+                <li class="nav-header">Analytics</li>
+                <li class="active"><a href="#">System Log</a></li>
+                <li class="nav-header">Extensions</li>
+
+                @foreach (var Extension in @Model.MultiPlugAPI.Extensions)
+                {
+                    <li><a href="@Raw(Model.Context.Paths.Home)">@Extension.Meta.Assembly</a></li>
+                }
+
+                <li class="divider"></li>
+
+            </ul>
+        </div>
+    </div>
+    <div class="span9">
+        <div class="box">
+            <ul class="nav nav-pills">
+                <li class="active">
+                    <a href="@Raw(Model.Context.Paths.Home)">All</a>
+                </li>
+                <li><a href="@Raw(Model.Context.Paths.Home)?filter=errors">Errors</a></li>
+                <li><a href="@Raw(Model.Context.Paths.Home)?filter=warnings">Warnings</a></li>
+            </ul>
+
+            <div id="trace-log">
+
+                <p>The Trace Log of the core MultiPlug system</p>
+                <div class="row-fluid">
+
+                    <textarea id="Logging" spellcheck="false" rows="3" class="input-block-level" wrap="off" style="margin: 0px; height: 450px;">@Model.Extension.Model.TraceLog</textarea>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<script>
+    function scrollLogToBottom(loggingTextArea) {
+        var textarea = document.getElementById(loggingTextArea);
+        textarea.scrollTop = textarea.scrollHeight;
+    }
+
+    $.connection.wS.on("Send", function (id, Group) {
+        if (id == '@Model.Extension.Model.TraceLogId') {
+            var loggingTextArea = $('#Logging');
+            loggingTextArea.text(loggingTextArea.text() + Group.Subjects[1].Value + '\n');
+            scrollLogToBottom('Logging');
+        }
+    });
+
+    scrollLogToBottom('Logging');
+</script>
