--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
@@ -29,7 +29,7 @@
 
                     <tr>
                         <td>Licensee</td>
-                        <td>@Model.Extension.Model.Licensee</td>
+                        <td>@Model.Extension.Model.Licensee <a href="/multiplug/setup/">Change</a></td>
                         <td></td>
                         <td></td>
                         <td></td>
