--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/Authorisation.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/Authorisation.cshtml
@@ -10,19 +10,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>
-        MultiPlug - Sign In
-    </title>
-    <meta name="description" content="">
+    <title>Permission Denied - MultiPlug</title>
+    <meta name="description" content="Log into MultiPlug">
     <meta name="viewport" content="width=device-width">
 
     <base href="@Model.Context.Paths.Base">
 
-    <link href="assets/mplib/styles/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" id="bootstrap-css">
-    <link href="assets/default2016/styles/font.awesome.min.css" media="all" rel="stylesheet" type="text/css">
-    <link href="assets/default2016/styles/adminflare.min.css" media="all" rel="stylesheet" type="text/css" id="adminflare-css">
-    <link href="assets/default2016/styles/pages.min.css" media="all" rel="stylesheet" type="text/css">
-    <script src="assets/mplib/scripts/jquery-1.10.2.js" type="text/javascript"></script>
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/styles/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" id="bootstrap-css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/font.awesome.min.css" media="all" rel="stylesheet" type="text/css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/adminflare.min.css" media="all" rel="stylesheet" type="text/css" id="adminflare-css">
+    <link href="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/styles/pages.min.css" media="all" rel="stylesheet" type="text/css">
+    <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/scripts/jquery-1.10.2.js" type="text/javascript"></script>
 
     <!--[if lte IE 9]>
         <script src="assets/javascripts/jquery.placeholder.min.js" type="text/javascript"></script>
@@ -33,47 +31,29 @@
         </script>
     <![endif]-->
 
-    <script type="text/javascript">
-		$(document).ready(function() {
-			var updateBoxPosition = function() {
-				$('#signin-container').css({
-					'margin-top': ($(window).height() - $('#signin-container').height()) / 2
-				});
-			};
-			$(window).resize(updateBoxPosition);
-			setTimeout(updateBoxPosition, 20);
-		});
-    </script>
+
 </head>
 <body class="signin-page">
-
-    <!-- Page content
-        ================================================== -->
     <section id="signin-container">
         <a href="" title="MultiPlug" class="header">
-            <img src="assets/default2016/images/MultiPlug-Login.png" alt="Sign in to MultiPlug">
+            <img src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/images/MultiPlug-Login.png" alt="MultiPlug Logo">
             <span>
             </span>
         </a>
-        <form action="" method="post" accept-charset="utf-8">
+        <form action="multiplug/authentication/" method="post" accept-charset="utf-8">
+            <p style="color:white">You don't have permission to access this page.</p>
             <fieldset>
-                <div class="fields">
-                    <input type="text" name="Username" placeholder="Username" id="id_username" tabindex="1">
-
-                    <input type="password" name="Password" placeholder="Password" id="id_password" tabindex="2">
-
-                    <select name="Domain" id="id_domain" tabindex="3">
-                        @foreach (var Domain in Model.Extension.Model.Domains)
-                        {
-                            <option value="@Domain">@Domain</option>
-                        }
-                    </select>
-
-                </div>
-                <button type="submit" class="btn btn-primary btn-block" tabindex="4">Sign In</button>
+                <button name="action" value="logout" type="submit" class="btn btn-primary btn-block" tabindex="4">Log out</button>
             </fieldset>
-        </form>
-        @Raw(Model.Extension.Model.EvaluationHint)
+        </form>     
     </section>
+
+    <script type="text/javascript">
+		$(document).ready(function() {
+			$('#signin-container').css({
+				'margin-top': ($(window).height() - $('#signin-container').height()) / 2
+			});
+		});
+    </script>
 </body>
 </html>
