--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
@@ -56,7 +56,7 @@
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html class="no-js full-height">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -120,7 +120,7 @@
     @Raw(Model.Extension.HeadMarkUp)
 
 </head>
-<body>
+<body class="full-height">
     <!-- Main navigation bar
         ================================================== -->
     <header class="navbar navbar-fixed-top" id="main-navbar">
@@ -192,7 +192,7 @@
                                 </li>
                                 <li class="divider"></li>*@
                                 <li>
-                                    <a href="auth/logout">Log Out</a>
+                                    <a href="multiplug/authentication/logout">Log Out</a>
                                 </li>
                             </ul>
                         </li>
@@ -416,7 +416,7 @@
     <!-- / Left navigation panel -->
     <!-- Page content
         ================================================== -->
-    <section class="container">
+    <section class="container full-height">
         @RenderBody()
     </section>
     <div class="notifications top-right"></div>
