--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHosting.cshtml
@@ -23,7 +23,7 @@
 <div class="setting-heading">
     <h2>Hosting</h2>
 </div>
-<form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
+<form style="display:contents" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
     <h3 class="box-header">
         Server URLs
     </h3>
@@ -88,14 +88,18 @@
     </div>
 
     <div class="row-fluid">
-        <div class="span4"></div>
-        <div class="span2">
+        <div class="span6">
             <button type="submit" value="submit" class="btn btn-green btn-block">Save</button>
         </div>
-        <div class="span2">
+        <div class="span6">
             <button id="cancel-btn" type="button" class="btn  btn-block">Cancel</button>
         </div>
-        <div class="span4">
+    </div>
+
+    <h3 class="box-header">@Model.Extension.Model.FileName</h3>
+    <div class="box" style="height:75%">
+        <div class="row-fluid full-height">
+            <textarea name="FileContent" spellcheck="false" rows="3" class="input-block-level full-height" wrap="off" style="resize: none;">@Model.Extension.Model.FileContent</textarea>
         </div>
     </div>
 </form>
